--- a/NOLF/ObjectDLL/Object.vcxproj
+++ b/NOLF/ObjectDLL/Object.vcxproj
@@ -96,7 +96,6 @@
     <OutDir>.\Final_Release\</OutDir>
     <IntDir>.\Final_Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IgnoreImportLibrary>true</IgnoreImportLibrary>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -212,9 +211,14 @@
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <ForceConformanceInForLoopScope>false</ForceConformanceInForLoopScope>
       <LanguageStandard>stdcpp14</LanguageStandard>
+      <FloatingPointModel>Strict</FloatingPointModel>
+      <FloatingPointExceptions>true</FloatingPointExceptions>
     </ClCompile>
     <PostBuildEvent>
-      <Command>copy debug\object.lto $(NOLF_BUILD_DIR)</Command>
+      <Command>copy debug\object.lto $(NOLF_BUILD_DIR)
+
+cd ..\
+call "D:\GameDev\no-one-lives-forever-master\NOLF\_after_build_debug.bat"</Command>
     </PostBuildEvent>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -239,12 +243,12 @@
       <SubSystem>Windows</SubSystem>
       <OutputFile>debug\Object.lto</OutputFile>
       <ImportLibrary>.\Debug\Object.lib</ImportLibrary>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;ButeMgr.lib;cryptmgr.lib;GameSpyMgr.lib;MFCStub.lib;StdLith.lib;RegMgr.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
       <IgnoreAllDefaultLibraries>
       </IgnoreAllDefaultLibraries>
       <IgnoreSpecificDefaultLibraries>libcimtd.lib</IgnoreSpecificDefaultLibraries>
-      <ForceFileOutput>UndefinedSymbolOnly</ForceFileOutput>
+      <AdditionalLibraryDirectories>..\..\lt2\lithshared\built\Debug\ButeMgr;..\..\lt2\lithshared\built\Debug\CryptMgr;..\..\lt2\lithshared\built\Debug\MFCStub;..\..\lt2\lithshared\libs\Debug;..\..\LIBS\SDL2-2.0.10\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Final Release|Win32'">
@@ -256,7 +260,7 @@
       <Optimization>MaxSpeed</Optimization>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\..\lt2\sdk\inc;..\..\lt2\lithshared\incs;..\shared;..\objectdll;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\lt2\sdk\inc;..\..\lt2\lithshared\incs;..\shared;..\objectdll;..\..\LIBS\SDL2-2.0.10\include;..\..\lt2\lithshared\ButeMgr;..\..\lt2\lithshared\CryptMgr;..\..\lt2\lithshared\lith;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_REZFILE;_FINAL;NDEBUG;WIN32;_WINDOWS;_NOLFBUILD;NO_PRAGMA_LIBS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Final_Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Final_Release\Object.pch</PrecompiledHeaderOutputFile>
@@ -264,6 +268,8 @@
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
       <ObjectFileName>.\Final_Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Final_Release\</ProgramDataBaseFileName>
+      <LanguageStandard>stdcpp14</LanguageStandard>
+      <ForceConformanceInForLoopScope>false</ForceConformanceInForLoopScope>
     </ClCompile>
     <PostBuildEvent>
       <Command>copy Final_Release\object.lto $(NOLF_BUILD_DIR)</Command>
@@ -290,7 +296,12 @@
       <SubSystem>Windows</SubSystem>
       <OutputFile>Final_Release\Object.lto</OutputFile>
       <ImportLibrary>.\Final_Release\Object.lib</ImportLibrary>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;ButeMgr.lib;cryptmgr.lib;GameSpyMgr.lib;MFCStub.lib;StdLith.lib;RegMgr.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreSpecificDefaultLibraries>libcimtd.lib;\proj\libs\release\StdLith.lib</IgnoreSpecificDefaultLibraries>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
+      <AdditionalLibraryDirectories>..\..\lt2\lithshared\built\Release\ButeMgr;..\..\lt2\lithshared\built\Release\CryptMgr;..\..\lt2\lithshared\built\Release\MFCStub;..\..\lt2\lithshared\libs\Release;..\..\LIBS\SDL2-2.0.10\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <ForceSymbolReferences>
+      </ForceSymbolReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -789,40 +800,6 @@ ren AnimationParse.cpp AnimationParse.cpp
 del AnimationParse.cpp.output </Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Final Release|Win32'">AnimationParse.cpp;%(Outputs)</Outputs>
     </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="..\..\LIBS\SDL2-2.0.10\lib\x86\SDL2.lib" />
-    <Library Include="..\..\LIBS\SDL2-2.0.10\lib\x86\SDL2main.lib" />
-    <Library Include="..\..\LT2\lithshared\built\Debug\ButeMgr\ButeMgr.lib" />
-    <Library Include="..\..\LT2\lithshared\built\Debug\CryptMgr\cryptmgr.lib" />
-    <Library Include="..\..\LT2\lithshared\built\Debug\MFCStub\MFCStub.lib" />
-    <Library Include="..\..\LT2\lithshared\libs\Debug\GameSpyMgr.lib" />
-    <Library Include="..\..\Lt2\lithshared\libs\Debug\RegMgr.lib" />
-    <Library Include="..\..\LT2\lithshared\libs\Debug\StdLith.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Release|Win32'">true</ExcludedFromBuild>
-    </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Release\ButeMgrNoMFC.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Release\CryptMgr.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Release\GameSpyMgr.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </Library>
-    <Library Include="..\..\LT2\lithshared\libs\Release\MFCStub.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </Library>
-    <Library Include="..\..\Lt2\lithshared\libs\Release\RegMgr.lib" />
-    <Library Include="..\..\LT2\lithshared\libs\Release\StdLith.lib">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Final Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </Library>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Attributes\Music.txt" />
