--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,4 @@ steps:
     solution: '$(solution)'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    vsVersion: '15.0'
