Hopefully final update
Swapped VSBuild for MSBuild.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,8 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: VSBuild@1
+- task: MSBuild@1
   inputs:
-    solution: '$(solution)'
+    solution: '**/*.sln'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-    vsVersion: '16.0'
