_CRT_SECURE_NO_WARNINGS for butemgr.

--- a/LT2/lithshared/butemgr/ButeMgr.vcxproj
+++ b/LT2/lithshared/butemgr/ButeMgr.vcxproj
@@ -160,7 +160,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>..\STLPORT-4.0\STLPORT;..\stdlith;..\mfcstub;..\cryptmgr;..\lith;..\..\sdk\inc;..\..\..\LIBS\SDL2-2.0.10\include;..\..\lithshared\incs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG;_NOMFC;WIN32;_WINDOWS;NO_PRAGMA_LIBS;_REZFILE;_FINAL;_NOLFBUILD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_NOMFC;WIN32;_WINDOWS;NO_PRAGMA_LIBS;_REZFILE;_FINAL;_NOLFBUILD;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\..\built\release\ButeMgr\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\..\built\release\ButeMgr\ButeMgr.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\..\built\release\ButeMgr\</ObjectFileName>
