Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,8 @@ steps:
     
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '.\\'
-    Contents: 'ASSETS\\**'
+    SourceFolder: 'ASSETS'
+    Contents: '**'
     TargetFolder: '$(Pipeline.Workspace)\\Artifacts'
     
 
