--- a/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
+++ b/NOLF/ClientShellDLL/ClientShellDLL.vcxproj.filters
@@ -605,6 +605,9 @@
     <ClCompile Include="FolderHUD.cpp">
       <Filter>Source\Interface</Filter>
     </ClCompile>
+    <ClCompile Include="FolderJukebox.cpp">
+      <Filter>Source\Interface</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Shared\AssertMgr.h">
@@ -1289,6 +1292,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="FolderHUD.h">
+      <Filter>Source\Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="FolderJukebox.h">
       <Filter>Source\Interface</Filter>
     </ClInclude>
   </ItemGroup>
